<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.ding.opencv.PhotoChangeColorActivity">


    <Button
        android:id="@+id/compare"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:text="@string/back"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn"
        android:layout_gravity="right"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:id="@+id/showPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/imgResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:text="@string/gray"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAllCaps="false"
            android:onClick="gray"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:text="@string/changeColor"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAllCaps="false"
            android:onClick="changePhoto"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:text="@string/inpaint"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAllCaps="false"
            android:onClick="inpaint"/>

    </LinearLayout>

</LinearLayout>