<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:text="@string/magnify"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:onClick="enterEyeMagnify"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:text="@string/smallFace"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:onClick="enterSmallFace"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:text="@string/longLeg"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:onClick="enterLongLeg"/>


        </LinearLayout>

    </HorizontalScrollView>



</LinearLayout>